--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>vendas</h1>
+    <p>Vendas por atacado!</p>
     <a href="index.html">voltar para home</a>
 </body>
 </html>
